--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "main": "src/index.js",
   "scripts": {
     "dev": "nodemon src/index.js",
-    "start": "node src/index.js"
+    "start": "node src/index.js",
+    "build:css": "npx tailwindcss -i ./src/public/css/tailwind.css -o ./src/public/css/output.css",
+    "watch:css": "npx tailwindcss -i ./src/public/css/tailwind.css -o ./src/public/css/output.css --watch"
   },
   "keywords": [],
   "author": "",
@@ -12,12 +14,17 @@
   "description": "",
   "dependencies": {
     "body-parser": "^1.20.3",
+    "dotenv": "^16.4.5",
     "ejs": "^3.1.10",
     "express": "^4.20.0",
     "express-session": "^1.18.0",
-    "memorystore": "^1.6.7"
+    "memorystore": "^1.6.7",
+    "mongoose": "^8.6.2",
+    "multer": "^1.4.5-lts.1",
+    "nanoid": "^5.0.7"
   },
   "devDependencies": {
-    "nodemon": "^3.1.4"
+    "nodemon": "^3.1.4",
+    "tailwindcss": "^3.4.12"
   }
 }
